--- a/pierwszy challenge z front end mentor.html
+++ b/pierwszy challenge z front end mentor.html
@@ -18,29 +18,32 @@
     }
     .boxes{
       margin: auto;
-      width: 70%;
+      width: 600px;
       height: 400px;
       position: relative;
       top: 200px;
+      -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+      -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+      box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+      border-radius: 10px;
     }
     .box1, .box2, .box3{
       position: absolute;
-      left: 25%;
       height: 200px;
     }
     .box1{
-      width: 50%;
+      width: 100%;
       background-color: white;
       border-radius: 10px 10px 0px 0px;
     }
     .box2{
       background-color: rgba(43,179,177,255);
       top: 200px;
-      width: 26%;
+      width: 50%;
       border-radius: 0px 0px 0px 10px;
     }
     .box3{
-      width: 25%;
+      width: 50%;
       top: 200px;
       left: 50%;
       background-color: rgba(74,190,189,255);
@@ -73,7 +76,7 @@
     .tiny{
       position: absolute;
       top: 27%;
-      right: 43%;
+      right: 40%;
     }
     .cyan{
       color: hsl(179, 62%, 43%);
@@ -88,8 +91,28 @@
       color: hsl(204, 43%, 93%);
     }
 
-    .attribution { font-size: 11px; text-align: unset; }
+    .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    @media (max-width: 650px){
+      .boxes{
+        height: auto;
+        width: 100%;
+      }
+      .box2, .box3{
+        width: 100%;
+        left: 0%;
+        border-radius: 0px;
+      }
+      .box3{
+        top: 400px;
+        border-radius: 0px 0px 10px 10px;
+      }
+      .tiny{
+        left: 60px;
+        top: 70px;
+      }
+      
+    }
   </style>
 </head>
 <body>
